--- a/src/Mono/Presentation/Localization/Resources.en.resx
+++ b/src/Mono/Presentation/Localization/Resources.en.resx
@@ -117,70 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnAssignCar" xml:space="preserve">
+  <data name="AssignCar" xml:space="preserve">
     <value>Assign</value>
   </data>
-  <data name="btnDeleteCar" xml:space="preserve">
+  <data name="Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
-  <data name="btnDeletePerson" xml:space="preserve">
-    <value>Delete</value>
-  </data>
-  <data name="btnNewCar" xml:space="preserve">
+  <data name="New" xml:space="preserve">
     <value>New</value>
   </data>
-  <data name="btnNewPerson" xml:space="preserve">
-    <value>New</value>
-  </data>
-  <data name="btnRemoveCar" xml:space="preserve">
+  <data name="RemoveCar" xml:space="preserve">
     <value>Remove</value>
   </data>
-  <data name="btnSaveCar" xml:space="preserve">
+  <data name="Save" xml:space="preserve">
     <value>Save</value>
   </data>
-  <data name="btnSavePerson" xml:space="preserve">
-    <value>Save</value>
+  <data name="Id" xml:space="preserve">
+    <value>Id</value>
   </data>
-  <data name="lblAssignedCars" xml:space="preserve">
-    <value>Assigned cars</value>
+  <data name="AssignedCars" xml:space="preserve">
+    <value>Assigned Cars</value>
   </data>
-  <data name="lblAvailableCars" xml:space="preserve">
-    <value>Available cars</value>
+  <data name="AvailableCars" xml:space="preserve">
+    <value>Available Cars</value>
   </data>
-  <data name="lblBrand" xml:space="preserve">
+  <data name="Brand" xml:space="preserve">
     <value>Brand</value>
   </data>
-  <data name="lblFirstname" xml:space="preserve">
-    <value>First name</value>
+  <data name="FirstName" xml:space="preserve">
+    <value>First Name</value>
   </data>
-  <data name="lblIdentityCard" xml:space="preserve">
-    <value>Identity card</value>
+  <data name="IdentityNumber" xml:space="preserve">
+    <value>Identity Number</value>
   </data>
-  <data name="lblLastname" xml:space="preserve">
-    <value>Last name</value>
+  <data name="LastName" xml:space="preserve">
+    <value>Last Name</value>
   </data>
-  <data name="lblLicensePlate" xml:space="preserve">
-    <value>License plate</value>
+  <data name="LicensePlate" xml:space="preserve">
+    <value>License Plate</value>
   </data>
-  <data name="lblModel" xml:space="preserve">
+  <data name="Model" xml:space="preserve">
     <value>Model</value>
   </data>
-  <data name="lblPersonCars" xml:space="preserve">
-    <value>Person's cars</value>
+  <data name="PersonCars" xml:space="preserve">
+    <value>Person's Cars</value>
   </data>
-  <data name="lblPersons" xml:space="preserve">
+  <data name="Persons" xml:space="preserve">
     <value>Persons</value>
   </data>
-  <data name="lblPrice" xml:space="preserve">
+  <data name="Price" xml:space="preserve">
     <value>Price</value>
   </data>
-  <data name="lblQuantity" xml:space="preserve">
+  <data name="Quantity" xml:space="preserve">
     <value>Quantity</value>
   </data>
-  <data name="lblYear" xml:space="preserve">
+  <data name="Year" xml:space="preserve">
     <value>Year</value>
   </data>
-  <data name="MainForm" xml:space="preserve">
+  <data name="Person" xml:space="preserve">
+    <value>Person</value>
+  </data>
+  <data name="Title" xml:space="preserve">
     <value>Car Assignment Manager</value>
   </data>
 </root>
