--- a/src/Mono/Presentation/Localization/Resources.en.resx
+++ b/src/Mono/Presentation/Localization/Resources.en.resx
@@ -177,7 +177,10 @@
   <data name="Person" xml:space="preserve">
     <value>Person</value>
   </data>
-  <data name="Title" xml:space="preserve">
+  <data name="TitleMain" xml:space="preserve">
     <value>Car Assignment Manager</value>
+  </data>
+  <data name="TitleLog" xml:space="preserve">
+    <value>Log Viewer</value>
   </data>
 </root>
