--- a/src/Mono/Presentation/Localization/Resources.es.resx
+++ b/src/Mono/Presentation/Localization/Resources.es.resx
@@ -121,7 +121,7 @@
     <value>Asignar</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Gestor de asignación de autos</value>
+    <value>Borrar</value>
   </data>
   <data name="New" xml:space="preserve">
     <value>Nuevo</value>
@@ -177,7 +177,10 @@
   <data name="Person" xml:space="preserve">
     <value>Persona</value>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>Título</value>
+  <data name="TitleMain" xml:space="preserve">
+    <value>Gestor de asignación de autos</value>
+  </data>
+  <data name="TitleLog" xml:space="preserve">
+    <value>Bitácora</value>
   </data>
 </root>
