--- a/src/Mono/Presentation/Localization/Resources.es.resx
+++ b/src/Mono/Presentation/Localization/Resources.es.resx
@@ -237,4 +237,16 @@
   <data name="Persistence" xml:space="preserve">
     <value>Persistencia</value>
   </data>
+  <data name="TitleLogin" xml:space="preserve">
+    <value>Sesión</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Usuario</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Contraseña</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Iniciar sesión</value>
+  </data>
 </root>
