--- a/src/Mono/Presentation/Localization/Resources.en.resx
+++ b/src/Mono/Presentation/Localization/Resources.en.resx
@@ -237,4 +237,16 @@
   <data name="Persistence" xml:space="preserve">
     <value>Persistence</value>
   </data>
+  <data name="TitleLogin" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Username</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
 </root>
