--- a/src/Mono/Presentation/Localization/Resources.resx
+++ b/src/Mono/Presentation/Localization/Resources.resx
@@ -217,24 +217,36 @@
     <value>Filter Select</value>
   </data>
   <data name="Timestamp" xml:space="preserve">
-    <value />
+    <value>Log Timestamp</value>
   </data>
   <data name="Message" xml:space="preserve">
-    <value />
+    <value>Log Message</value>
   </data>
   <data name="StackTrace" xml:space="preserve">
-    <value />
+    <value>Log Stack Trace</value>
   </data>
   <data name="Source" xml:space="preserve">
-    <value />
+    <value>Log Source</value>
   </data>
   <data name="ViewLog" xml:space="preserve">
-    <value />
+    <value>View Log</value>
   </data>
   <data name="Language" xml:space="preserve">
-    <value />
+    <value>Select Language</value>
   </data>
   <data name="Persistence" xml:space="preserve">
-    <value />
+    <value>Select Persistence</value>
+  </data>
+  <data name="TitleLogin" xml:space="preserve">
+    <value>Title of Form Login</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>User Username</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>User Password</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
   </data>
 </root>
