--- a/src/Mono/Presentation/Localization/Resources.resx
+++ b/src/Mono/Presentation/Localization/Resources.resx
@@ -180,7 +180,7 @@
   <data name="TitleMain" xml:space="preserve">
     <value>Title of Form Main</value>
   </data>
-  <data name="TitleLog" xml:space="preserve">
+  <data name="TitleLogViewer" xml:space="preserve">
     <value>Title of Form Viewer</value>
   </data>
   <data name="Information" xml:space="preserve">
@@ -248,5 +248,11 @@
   </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="UserManagement" xml:space="preserve">
+    <value>User Management</value>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>User Role</value>
   </data>
 </root>
