--- a/src/Presentation/Localization/Resources.en.resx
+++ b/src/Presentation/Localization/Resources.en.resx
@@ -148,13 +148,13 @@
     <value>First Name</value>
   </data>
   <data name="IdentityNumber" xml:space="preserve">
-    <value>Identity Number</value>
+    <value>Id. Number</value>
   </data>
   <data name="LastName" xml:space="preserve">
     <value>Last Name</value>
   </data>
   <data name="LicensePlate" xml:space="preserve">
-    <value>License Plate</value>
+    <value>Lic. Plate</value>
   </data>
   <data name="Model" xml:space="preserve">
     <value>Model</value>
